--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -122,3 +122,34 @@
   border-radius: 50%;
   opacity: 0.5;
 }
+
+
+.nav-wrapper ul li{
+  list-style: none; 
+  display: inline; 
+  margin-right: 10px;
+
+}
+
+.nav-wrapper ul{
+  margin:0px;
+  padding: 0px;
+}
+
+nav::before{
+padding: 0px;
+}
+
+.wrapper{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.loader_item{
+  width: 200px;
+  height: 200px;
+  margin:30px;
+  flex: 1 1 auto;
+}
